fixes URL & image dialogue so checkbox is visible

--- a/app/styles/apps/_common.scss
+++ b/app/styles/apps/_common.scss
@@ -23,10 +23,10 @@ body{
   }
 }
 
-input {
-    -webkit-appearance: none;
-    border-radius: 0;
-}
+// input {
+//     -webkit-appearance: none;
+//     border-radius: 0;
+// }
 .btn {
   opacity: 1;
   pointer-events: auto;
